// go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
// go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
// protoc --go_out=invoicer --go_opt=paths=source_relative --go-grpc_out=invoicer --go-grpc_opt=paths=source_relative invoicer.proto

syntax = "proto3";
option go_package = "github.com/zezoamr/invoicer-service-grpc-Go/invoicer";

service Invoicer {
    rpc SendVoiceMail(CreateRequest)        returns (SendRequestStatus);
    rpc ReadUnSeenReceived(ReadRequest)     returns (stream multipleinvoice);
    rpc ReadAllReceived(ReadRequest)        returns (stream multipleinvoice);
    rpc ReadAllSent(ReadRequest)            returns (stream multipleinvoice);
    rpc DeleteSeenReceived(DeleteRequest)   returns (DeleteRequestStatus);
    rpc DeleteAllReceived(DeleteRequest)    returns (DeleteRequestStatus);
}

message NoParmas{    
}

message ReadRequest{
    int64 userid = 1;  
    int64 skip = 2;
    int64 limit = 3;
}

message DeleteRequest{
    int64 userid = 1;  
}

message SendRequestStatus{
    int32 Status = 1;  
    int64 messageid = 2;  
}

message DeleteRequestStatus{
    int32 Status = 1;  
    int64 userid = 2;  
}

message invoice{
    bytes audio = 1;
    repeated string words = 2;
    bool wordsnotaudio = 3;
}


message multipleinvoice{
    repeated invoice messages = 1;
}

message CreateRequest{
    int64 userfrom = 1;
    int64 userto = 2;
    invoice message = 3;
    int64 messageid = 4;
}

